clusters/staging/nginx-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    environment: staging
***
apiVersion: v1
kind: Namespace  
metadata:
  name: monitoring
  labels:
    environment: staging
