clusters/staging/prometheus-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: prometheus-auth
  namespace: flux-system
spec:
  basicAuth:
    secret: prometheus-basic-auth-secret
