clusters/staging/prometheus-remote-write.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-remote
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: lia-kube.cloudist.solutions
    http:
      paths:
      - path: /prometheus-ingress
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-stack-prometheus
            port:
              number: 9090
  tls:
  - hosts:
    - lia-kube.cloudist.solutions
    secretName: prometheus-remote-tls
